// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logger Should disabled on production mode 1`] = `Array []`;

exports[`Logger Should log 404 request 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.error()           -> GET  /users/error",
  ],
  Array [
    "2. UsersController.save(name, email) -> POST /users",
  ],
  Array [
    "3. UsersController.get(id)           -> GET  /users/:id",
  ],
  Array [],
  Array [
    "GET 404 /users-data 123ms",
  ],
]
`;

exports[`Logger Should log action without status 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.get(id) -> GET /users/:id",
  ],
  Array [],
  Array [
    "GET 200 /users/custom 123ms",
  ],
]
`;

exports[`Logger Should log internal error request 1`] = `
Array [
  Array [
    "GET 500 /users/error 123ms",
  ],
]
`;

exports[`Logger Should log invalid validation request 1`] = `
Object {
  "message": Array [
    Object {
      "messages": Array [
        "Invalid email address",
      ],
      "path": Array [
        "email",
      ],
    },
  ],
  "status": 422,
}
`;

exports[`Logger Should log invalid validation request 2`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.error()           -> GET  /users/error",
  ],
  Array [
    "2. UsersController.save(name, email) -> POST /users",
  ],
  Array [
    "3. UsersController.get(id)           -> GET  /users/:id",
  ],
  Array [],
  Array [
    "POST 422 /users 123ms",
  ],
  Array [
    "[{\\"path\\":[\\"email\\"],\\"messages\\":[\\"Invalid email address\\"]}]",
  ],
]
`;

exports[`Logger Should log post request 1`] = `
Object {
  "email": "mimi.cute@gmail.com",
  "name": "Mimi",
}
`;

exports[`Logger Should log post request 2`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.error()           -> GET  /users/error",
  ],
  Array [
    "2. UsersController.save(name, email) -> POST /users",
  ],
  Array [
    "3. UsersController.get(id)           -> GET  /users/:id",
  ],
  Array [],
  Array [
    "POST 200 /users 123ms",
  ],
]
`;

exports[`Logger Should log success request 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. UsersController.error()           -> GET  /users/error",
  ],
  Array [
    "2. UsersController.save(name, email) -> POST /users",
  ],
  Array [
    "3. UsersController.get(id)           -> GET  /users/:id",
  ],
  Array [],
  Array [
    "GET 200 /users/123 123ms",
  ],
]
`;
